--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,43 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #1e1e1e;
+  overflow-x: hidden; /* Mencegah scroll horizontal */
+}
+
+/* Untuk Webkit Browsers */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
+  background: rgb(67, 66, 66);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(31.6px);
+  -webkit-backdrop-filter: blur(11.6px);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
